feat: Created Card ui component

--- a/src/layouts/MainLayout/MainLayout.module.sass
+++ b/src/layouts/MainLayout/MainLayout.module.sass
@@ -1,3 +1,6 @@
-.container
-    width: 1280px
-    margin: 0 auto
+.root
+    height: 100vh
+    background: linear-gradient(180deg, #FEB054 0%, #FEA14E 100%)
+    .container
+        width: 1280px
+        margin: 0 auto
