--- a/src/components/ui/Icon/Icon.module.sass
+++ b/src/components/ui/Icon/Icon.module.sass
@@ -1,12 +1,10 @@
 .root
     width: 44px
     height: 44px
-    display: flex
-    align-items: center
-    justify-content: center
     background: rgba(255, 255, 255, 0.9)
     box-shadow: 0px 18px 20px -6px rgba(23, 126, 37, 0.15), 0px 0px 10px rgba(0, 0, 0, 0.07)
     border-radius: 16px
+    overflow: hidden
     .icon
-        width: 36px
-        height: 36px
+        width: 100%
+        height: 100%
