--- a/src/layouts/MainLayout/MainLayout.module.sass
+++ b/src/layouts/MainLayout/MainLayout.module.sass
@@ -1,6 +1,7 @@
 .root
-    height: 100vh
+    min-height: 100vh
     background: linear-gradient(180deg, #FEB054 0%, #FEA14E 100%)
     .container
         width: 1280px
         margin: 0 auto
+        padding: 32px 32px 0
