--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -4,7 +4,7 @@
     grid-template-rows: repeat(4, auto)
     column-gap: 32px
     row-gap: 32px
-    .currentMain
+    .currentMainCard
         grid-row: span 3
     .forecastShort
         grid-column: span 2
