feat: Created CurrentSecondaryCard ui

--- a/src/components/CurrentSecondaryCard/CurrentSecondaryCard.module.sass
+++ b/src/components/CurrentSecondaryCard/CurrentSecondaryCard.module.sass
@@ -1,1 +1,13 @@
-
+.root
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding-right: 34px
+    font-weight: 400
+    font-size: 14px
+    color: #303345
+    .left
+        display: flex
+        align-items: center
+        .icon
+            margin-right: 16px
