ref: Updated some styles

--- a/src/components/CurrentMainCard/CurrentMainCard.module.sass
+++ b/src/components/CurrentMainCard/CurrentMainCard.module.sass
@@ -1,5 +1,5 @@
 .root
-    height: 296px
+    height: 264px
     display: flex
     .left
         .location
@@ -14,31 +14,35 @@
             font-size: 18px
             color: #9A938C
     .right
-        padding-bottom: 35px
-        align-self: flex-end
         display: flex
-        .icon
-            height: 160px
-            margin-right: 20px
-            img
-                height: 100%
-        .main
+        justify-content: center
+        flex-grow: 1
+        .content
+            padding-bottom: 35px
+            align-self: flex-end
             display: flex
-            flex-direction: column
-            justify-content: center
-            align-items: center
-            position: relative
-            color: #303345
-            .temp
-                font-weight: 700
-                font-size: 86px
-                line-height: 82px
-            .desc
-                font-weight: 400
-                font-size: 28px
-            .unit
-                position: absolute
-                top: 10px
-                right: -20px
-                font-weight: 300
-                font-size: 24px
+            .icon
+                height: 160px
+                margin-right: 20px
+                img
+                    height: 100%
+            .main
+                display: flex
+                flex-direction: column
+                justify-content: center
+                align-items: center
+                position: relative
+                color: #303345
+                .temp
+                    font-weight: 700
+                    font-size: 86px
+                    line-height: 82px
+                .desc
+                    font-weight: 400
+                    font-size: 28px
+                .unit
+                    position: absolute
+                    top: 10px
+                    right: -20px
+                    font-weight: 300
+                    font-size: 24px
