--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
   font-family: 'Inter', sans-serif;
+  font-style: normal;
 }
