--- a/src/layouts/MainLayout/MainLayout.module.sass
+++ b/src/layouts/MainLayout/MainLayout.module.sass
@@ -2,6 +2,6 @@
     min-height: 100vh
     background: linear-gradient(180deg, #FEB054 0%, #FEA14E 100%)
     .container
-        width: 1280px
+        max-width: 1400px
         margin: 0 auto
-        padding: 32px 32px 0
+        padding: 0 32px
