--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -1,10 +1,12 @@
 .root
     display: grid
-    grid-template-columns: repeat(2, 1fr)
+    grid-template-columns: 3fr 2fr
     grid-template-rows: repeat(4, auto)
     column-gap: 32px
     row-gap: 32px
+    padding-top: 32px
     .currentMainCard
         grid-row: span 3
     .forecastShort
         grid-column: span 2
+        max-width: 100%
