--- a/src/components/LocationForm/LocationForm.module.sass
+++ b/src/components/LocationForm/LocationForm.module.sass
@@ -13,6 +13,7 @@
         border-radius: 20px
         padding: 8px
         margin-bottom: 16px
+        position: relative
         input
             width: 100%
             background: rgba(255, 255, 255, 0.36)
@@ -21,7 +22,18 @@
             padding: 12px 18px
             font-weight: 400
             font-size: 16px
-        .items
+        .icon
+            width: 26px
+            height: 26px
+            cursor: pointer
+            color: #D6996B
+            transition: color 0.3s linear
+            position: absolute
+            top: 17px
+            right: 17px
+            &:hover
+                color: #313341
+        .dropdown
             padding-top: 8px
             .item
                 display: flex
@@ -54,5 +66,13 @@
                     right: 9px
                     &:hover
                         color: #313341
+        .loader
+            height: 52px
+            padding-top: 8px
+            display: flex
+            align-items: center
+            justify-content: center
+            font-weight: 400
+            font-size: 16px
     .submit
         align-self: flex-end
