ref: Small style updates

--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -4,7 +4,7 @@
     grid-template-rows: repeat(5, auto)
     column-gap: 32px
     row-gap: 32px
-    padding-top: 32px
+    padding: 32px 0
     .optionsCard
         grid-column: span 2
     .currentPrimaryCard
