--- a/src/components/ForecastDetailCard/ForecastDetailCard.module.sass
+++ b/src/components/ForecastDetailCard/ForecastDetailCard.module.sass
@@ -12,12 +12,15 @@
             align-items: center
             .temp
                 font-weight: 700
+                margin-right: 12px
             .icon
                 display: flex
                 justify-content: center
+                align-items: center
                 transition: all 0.3s linear
                 img
-                    height: 100%
+                    max-width: 100%
+                    max-height: 100%
     .secondary
         transition: height 0.3s linear
         overflow: hidden
