--- a/src/components/ForecastSmallCard/ForecastSmallCard.module.sass
+++ b/src/components/ForecastSmallCard/ForecastSmallCard.module.sass
@@ -17,9 +17,14 @@
         margin-bottom: 8px
     .icon
         width: 45px
+        height: 35px
         margin-bottom: 4px
+        display: flex
+        justify-content: center
+        align-items: center
         img
-            width: 100%
+            max-width: 100%
+            max-height: 100%
     .temp
         font-weight: 700
     &:hover
