ref: Updated Modal styles

--- a/src/components/ui/Modal/Modal.module.sass
+++ b/src/components/ui/Modal/Modal.module.sass
@@ -10,6 +10,8 @@
     justify-content: center
     align-items: center
     .main
+        background: linear-gradient(180deg, #FEB054 0%, #FEA14E 100%)
+        border-radius: 20px
         position: relative
         .icon
             width: 36px
