feat: Added breakpoint variables

--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,3 +1,9 @@
 $primary-color: #303345
 $secondary-color: #9A938C
 $background-color: linear-gradient(180deg, #FEB054 0%, #FEA14E 100%)
+
+$sm: 576px
+$md: 768px
+$lg: 992px
+$xl: 1200px
+$xxl: 1400px
