feat: Added media queries to Home page

--- a/src/components/CurrentPrimaryCard/CurrentPrimaryCard.module.sass
+++ b/src/components/CurrentPrimaryCard/CurrentPrimaryCard.module.sass
@@ -1,6 +1,11 @@
+@use '../../styles/_mixins' as mixin
+
 .root
     height: 264px
     display: flex
+    @include mixin.tablet
+        height: auto
+        flex-direction: column
     .left
         .location
             display: block
@@ -21,9 +26,16 @@
             padding-bottom: 35px
             align-self: flex-end
             display: flex
+            @include mixin.tablet
+                padding: 20px 0
+                align-self: auto
+            @include mixin.mobile
+                flex-direction: column-reverse
             .icon
                 height: 160px
                 margin-right: 20px
+                @include mixin.mobile
+                    margin-right: 0
                 img
                     height: 100%
             .main
@@ -32,6 +44,8 @@
                 justify-content: center
                 align-items: center
                 color: #303345
+                @include mixin.mobile
+                    margin-bottom: 20px
                 .temp
                     font-weight: 700
                     font-size: 86px
