--- a/src/pages/Details/Details.module.sass
+++ b/src/pages/Details/Details.module.sass
@@ -1,3 +1,5 @@
+@use '../../styles/_mixins' as mixin
+
 .root
     padding-bottom: 32px
     .nav
@@ -21,9 +23,13 @@
             padding-right: 36px
     .main
         display: grid
-        grid-template-columns: repeat(2, 1fr)
+        grid-template-columns: repeat(3, 1fr)
         grid-auto-rows: auto
         column-gap: 32px
         row-gap: 32px
         align-items: center
         padding-top: 32px
+        @include mixin.desktop
+            grid-template-columns: repeat(2, 1fr)
+        @include mixin.tablet
+            grid-template-columns: repeat(1, 1fr)
