--- a/src/components/CurrentSecondaryCard/CurrentSecondaryCard.module.sass
+++ b/src/components/CurrentSecondaryCard/CurrentSecondaryCard.module.sass
@@ -1,3 +1,5 @@
+@use '../../styles/_variables' as var
+
 .root
     display: flex
     justify-content: space-between
@@ -5,7 +7,7 @@
     padding-right: 34px
     font-weight: 400
     font-size: 14px
-    color: #303345
+    color: var.$primary-color
     .left
         display: flex
         align-items: center
