--- a/src/components/ForecastDetailCard/ForecastDetailCard.module.sass
+++ b/src/components/ForecastDetailCard/ForecastDetailCard.module.sass
@@ -1,7 +1,9 @@
+@use '../../styles/_variables' as var
+
 .root
     font-weight: 600
     font-size: 14px
-    color: #303345
+    color: var.$primary-color
     cursor: pointer
     .main
         display: flex
