--- a/src/layouts/EmptyLayout/EmptyLayout.module.sass
+++ b/src/layouts/EmptyLayout/EmptyLayout.module.sass
@@ -1,6 +1,8 @@
+@use '../../styles/_variables' as var
+
 .root
     display: flex
     justify-content: center
     align-items: center
-    background: linear-gradient(180deg, #FEB054 0%, #FEA14E 100%)
+    background: var.$background-color
     min-height: 100vh
