--- a/src/layouts/MainLayout/MainLayout.module.sass
+++ b/src/layouts/MainLayout/MainLayout.module.sass
@@ -1,6 +1,8 @@
+@use '../../styles/_variables' as var
+
 .root
     min-height: 100vh
-    background: linear-gradient(180deg, #FEB054 0%, #FEA14E 100%)
+    background: var.$background-color
     .container
         max-width: 1400px
         margin: 0 auto
