--- a/src/components/ForecastSmallCard/ForecastSmallCard.module.sass
+++ b/src/components/ForecastSmallCard/ForecastSmallCard.module.sass
@@ -1,3 +1,5 @@
+@use '../../styles/_variables' as var
+
 .root
     display: flex
     flex-direction: column
@@ -9,7 +11,7 @@
     border: 1px solid rgba(255, 255, 255, 0.5)
     border-radius: 40px
     font-size: 14px
-    color: #303345
+    color: var.$primary-color
     cursor: pointer
     transition: all 0.3s linear
     .time
