--- a/src/components/ui/Button/Button.module.sass
+++ b/src/components/ui/Button/Button.module.sass
@@ -1,13 +1,15 @@
+@use '../../../styles/_variables' as var
+
 .root
     background: rgba(255, 255, 255, 0.36)
-    border: 1px solid #313341
+    border: 1px solid var.$primary-color
     border-radius: 20px
     padding: 12px 18px
     transition: all 0.3s linear
     cursor: pointer
     font-weight: 400
     font-size: 16px
-    color: #313341
+    color: var.$primary-color
     &:hover
         background: rgba(255, 255, 255, 0.6)
         box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.08)
