--- a/src/components/ui/Modal/Modal.module.sass
+++ b/src/components/ui/Modal/Modal.module.sass
@@ -1,3 +1,5 @@
+@use '../../../styles/_variables' as var
+
 .root
     position: absolute
     top: 0
@@ -17,10 +19,10 @@
             width: 36px
             height: 36px
             cursor: pointer
-            color: #D6996B
+            color: var.$secondary-color
             transition: color 0.3s linear
             position: absolute
             top: 5px
             right: 5px
             &:hover
-                color: #313341
+                color: var.$primary-color
