feat: Added loading skeletons

--- a/src/components/CurrentPrimaryCard/CurrentPrimaryCard.module.sass
+++ b/src/components/CurrentPrimaryCard/CurrentPrimaryCard.module.sass
@@ -61,3 +61,10 @@
                 .desc
                     font-weight: 400
                     font-size: 28px
+.skeleton
+    .root
+        height: 264px
+        @include mixin.tablet
+            height: 325px
+        @include mixin.mobile
+            height: 460px
