--- a/src/components/ForecastSmallCard/ForecastSmallCard.module.sass
+++ b/src/components/ForecastSmallCard/ForecastSmallCard.module.sass
@@ -33,3 +33,10 @@
         background: rgba(255, 255, 255, 0.6)
         border: 1px solid rgba(255, 255, 255, 0.8)
         box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.08)
+.skeleton
+    .root
+        width: 62px
+        height: 108px
+        background: rgba(255, 255, 255, 0.36)
+        border: 1px solid rgba(255, 255, 255, 0.5)
+        border-radius: 40px
