chore: Small style updates

--- a/src/components/CurrentPrimaryCard/CurrentPrimaryCard.module.sass
+++ b/src/components/CurrentPrimaryCard/CurrentPrimaryCard.module.sass
@@ -25,6 +25,7 @@
         flex-grow: 1
         .content
             padding-bottom: 35px
+            padding-right: 22px
             align-self: flex-end
             display: flex
             @include mixin.tablet
