--- a/src/components/ui/Card/Card.module.sass
+++ b/src/components/ui/Card/Card.module.sass
@@ -3,6 +3,7 @@
     border: 1px solid rgba(255, 255, 255, 0.5)
     border-radius: 20px
     padding: 16px 22px
+    transition: all 0.3s linear
     &.active
         background: rgba(255, 255, 255, 0.6)
         border: 1px solid rgba(255, 255, 255, 0.8)
