--- a/src/components/ui/Modal/Modal.module.sass
+++ b/src/components/ui/Modal/Modal.module.sass
@@ -11,6 +11,7 @@
     display: flex
     justify-content: center
     align-items: center
+    z-index: 99
     .main
         background: linear-gradient(180deg, #FEB054 0%, #FEA14E 100%)
         border-radius: 20px
