feat: Added transition to Modal component

--- a/src/components/LocationForm/LocationForm.module.sass
+++ b/src/components/LocationForm/LocationForm.module.sass
@@ -24,6 +24,7 @@
             padding: 12px 18px
             font-weight: 400
             font-size: 16px
+            outline: none
         .icon
             width: 26px
             height: 26px
