feat: Added transitions to home & detail cards

--- a/src/components/ui/Modal/Modal.module.sass
+++ b/src/components/ui/Modal/Modal.module.sass
@@ -13,7 +13,7 @@
     align-items: center
     z-index: 99
     .main
-        background: linear-gradient(180deg, #FEB054 0%, #FEA14E 100%)
+        background: var.$background-color
         border-radius: 20px
         position: relative
         .icon
